--- a/service-clusterip/service1.yml
+++ b/service-clusterip/service1.yml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: web1
 spec:
+  type: LoadBalancer
+  ##loadBalancerIP: 192.168.1.103
   selector:
     app: myweb
   ports:
